--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        html, body {
+            background-color: tomato;
+        }
+    </style>
 </head>
 <body>
     <h1>este es mi primer despliegue con netlify</h1>
