--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         html, body {
-            background-color: tomato;
+            background-color: blueviolet;
         }
     </style>
 </head>
