cambiando fondo y cambio de color de la fuente

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <style>
         html, body {
-            background-color: blueviolet;
+            background-color: tomato;
+            color: antiquewhite;
         }
     </style>
 </head>
